--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" 
     content="width=device-width,user-scalable=0, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Designluch</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/designluch.local/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
